// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DownloadReportModal CSV renders component 1`] = `
<div>
  <div
    aria-hidden="true"
    class="modal-backdrop fade show"
    data-suppressed="true"
  />
  <div
    class="fade modal d-block show"
  >
    <div
      class="modal-dialog"
    >
      <div
        aria-labelledby="clay-modal-label-1"
        aria-modal="true"
        class="modal-content"
        role="dialog"
        tabindex="-1"
      >
        <form>
          <div
            class="modal-header"
          >
            <h1
              class="modal-title"
              id="clay-modal-label-1"
            >
              Download Report
            </h1>
            <button
              aria-label="close"
              class="close btn btn-unstyled"
              type="button"
            >
              <svg
                class="lexicon-icon lexicon-icon-times"
                role="presentation"
              >
                <use
                  href="#times"
                />
              </svg>
            </button>
          </div>
          <div
            class="modal-body"
          >
            <div
              class="alert alert-dismissible alert-info"
            >
              <div
                class="alert-autofit-row autofit-row"
                role="alert"
              >
                <div
                  class="autofit-col"
                >
                  <div
                    class="autofit-section"
                  >
                    <span
                      class="alert-indicator"
                    >
                      <svg
                        class="lexicon-icon lexicon-icon-info-circle"
                        role="presentation"
                      >
                        <use
                          href="/o/osb-faro-web/dist/sprite.svg#info-circle"
                        />
                      </svg>
                    </span>
                  </div>
                </div>
                <div
                  class="autofit-col autofit-col-expand"
                >
                  <div
                    class="autofit-section"
                  >
                    <strong
                      class="lead"
                    >
                      Info
                    </strong>
                    The individuals list will be downloaded respecting the current ordering, filter, and search results. Please verify if the desired changes are applied.
                  </div>
                </div>
              </div>
              <button
                aria-label="Close"
                class="close"
                type="button"
              >
                <svg
                  class="lexicon-icon lexicon-icon-times"
                  role="presentation"
                >
                  <use
                    href="/o/osb-faro-web/dist/sprite.svg#times"
                  />
                </svg>
              </button>
            </div>
            <p>
              Select a date range to export this list as a CSV document. The maximum number of entries supported per export is 10,000. The request may take a couple minutes to process.
            </p>
            <div
              class="form-group"
            >
              <label
                for="timeRange"
              >
                Date Range
              </label>
              <div
                class="dropdown"
              >
                <div
                  aria-controls="clay-dropdown-menu-1"
                  aria-expanded="false"
                  aria-haspopup="true"
                  class="input-group dropdown-toggle"
                >
                  <div
                    class="input-group-item input-group-prepend"
                  >
                    <input
                      class="form-control"
                      id="timeRange"
                      placeholder="YYYY-MM-DD - YYYY-MM-DD"
                      readonly=""
                      type="text"
                      value=""
                    />
                  </div>
                  <div
                    class="input-group-item input-group-append input-group-item-shrink"
                  >
                    <div
                      class="input-group-text"
                    >
                      <svg
                        class="lexicon-icon lexicon-icon-calendar"
                        role="presentation"
                      >
                        <use
                          href="#calendar"
                        />
                      </svg>
                    </div>
                  </div>
                </div>
                <div>
                  <div
                    aria-hidden="true"
                    class="dropdown-menu"
                    id="clay-dropdown-menu-1"
                    role="presentation"
                    style="max-width: none; min-width: none;"
                  >
                    <div
                      aria-disabled="false"
                      class="date-picker-root p-2"
                    >
                      <div
                        class="controls"
                      >
                        <div
                          class="month-toggle-wrapper"
                        >
                          <select
                            class="date-picker-select-root form-control"
                          >
                            <option
                              value="January"
                            >
                              January
                            </option>
                            <option
                              value="February"
                            >
                              February
                            </option>
                            <option
                              value="March"
                            >
                              March
                            </option>
                            <option
                              value="April"
                            >
                              April
                            </option>
                            <option
                              value="May"
                            >
                              May
                            </option>
                            <option
                              value="June"
                            >
                              June
                            </option>
                            <option
                              value="July"
                            >
                              July
                            </option>
                            <option
                              value="August"
                            >
                              August
                            </option>
                            <option
                              value="September"
                            >
                              September
                            </option>
                            <option
                              value="October"
                            >
                              October
                            </option>
                            <option
                              value="November"
                            >
                              November
                            </option>
                            <option
                              value="December"
                            >
                              December
                            </option>
                          </select>
                          <select
                            class="date-picker-select-root form-control"
                          >
                            <option
                              value="2023"
                            >
                              2023
                            </option>
                            <option
                              value="2022"
                            >
                              2022
                            </option>
                            <option
                              value="2021"
                            >
                              2021
                            </option>
                            <option
                              value="2020"
                            >
                              2020
                            </option>
                            <option
                              value="2019"
                            >
                              2019
                            </option>
                            <option
                              value="2018"
                            >
                              2018
                            </option>
                            <option
                              value="2017"
                            >
                              2017
                            </option>
                            <option
                              value="2016"
                            >
                              2016
                            </option>
                            <option
                              value="2015"
                            >
                              2015
                            </option>
                            <option
                              value="2014"
                            >
                              2014
                            </option>
                          </select>
                        </div>
                        <button
                          aria-label="Previous month"
                          class="button-root btn btn-monospaced btn-sm btn-secondary"
                          type="button"
                        >
                          <svg
                            class="lexicon-icon lexicon-icon-angle-left-small icon-root"
                            role="presentation"
                          >
                            <use
                              href="#angle-left-small"
                            />
                          </svg>
                        </button>
                        <button
                          class="button-root current-day-btn btn btn-monospaced btn-sm btn-secondary"
                          type="button"
                        >
                          •
                        </button>
                        <button
                          aria-label="Next month"
                          class="button-root btn btn-monospaced btn-sm btn-secondary"
                          data-testid="next-month"
                          disabled=""
                          type="button"
                        >
                          <svg
                            class="lexicon-icon lexicon-icon-angle-right-small icon-root"
                            role="presentation"
                          >
                            <use
                              href="#angle-right-small"
                            />
                          </svg>
                        </button>
                      </div>
                      <div
                        class="picker-body"
                      >
                        <table
                          class="calendar-root"
                        >
                          <thead>
                            <tr>
                              <th>
                                Sun
                              </th>
                              <th>
                                Mon
                              </th>
                              <th>
                                Tue
                              </th>
                              <th>
                                Wed
                              </th>
                              <th>
                                Thu
                              </th>
                              <th>
                                Fri
                              </th>
                              <th>
                                Sat
                              </th>
                            </tr>
                          </thead>
                          <tbody>
                            <tr>
                              <td
                                class=""
                              >
                                <div
                                  class="day-container"
                                >
                                  <button
                                    class="button-root day-root outside-month btn btn-unstyled"
                                    type="button"
                                  >
                                    29
                                  </button>
                                </div>
                              </td>
                              <td
                                class=""
                              >
                                <div
                                  class="day-container"
                                >
                                  <button
                                    class="button-root day-root outside-month btn btn-unstyled"
                                    type="button"
                                  >
                                    30
                                  </button>
                                </div>
                              </td>
                              <td
                                class=""
                              >
                                <div
                                  class="day-container"
                                >
                                  <button
                                    class="button-root day-root outside-month btn btn-unstyled"
                                    type="button"
                                  >
                                    31
                                  </button>
                                </div>
                              </td>
                              <td
                                class=""
                              >
                                <div
                                  class="day-container"
                                >
                                  <button
                                    class="button-root day-root btn btn-unstyled"
                                    type="button"
                                  >
                                    1
                                  </button>
                                </div>
                              </td>
                              <td
                                class=""
                              >
                                <div
                                  class="day-container"
                                >
                                  <button
                                    class="button-root day-root btn btn-unstyled"
                                    type="button"
                                  >
                                    2
                                  </button>
                                </div>
                              </td>
                              <td
                                class=""
                              >
                                <div
                                  class="day-container"
                                >
                                  <button
                                    class="button-root day-root btn btn-unstyled"
                                    type="button"
                                  >
                                    3
                                  </button>
                                </div>
                              </td>
                              <td
                                class=""
                              >
                                <div
                                  class="day-container"
                                >
                                  <button
                                    class="button-root day-root btn btn-unstyled"
                                    type="button"
                                  >
                                    4
                                  </button>
                                </div>
                              </td>
                            </tr>
                            <tr>
                              <td
                                class=""
                              >
                                <div
                                  class="day-container"
                                >
                                  <button
                                    class="button-root day-root btn btn-unstyled"
                                    type="button"
                                  >
                                    5
                                  </button>
                                </div>
                              </td>
                              <td
                                class=""
                              >
                                <div
                                  class="day-container"
                                >
                                  <button
                                    class="button-root day-root btn btn-unstyled"
                                    type="button"
                                  >
                                    6
                                  </button>
                                </div>
                              </td>
                              <td
                                class=""
                              >
                                <div
                                  class="day-container"
                                >
                                  <button
                                    class="button-root day-root btn btn-unstyled"
                                    type="button"
                                  >
                                    7
                                  </button>
                                </div>
                              </td>
                              <td
                                class=""
                              >
                                <div
                                  class="day-container"
                                >
                                  <button
                                    class="button-root day-root btn btn-unstyled"
                                    type="button"
                                  >
                                    8
                                  </button>
                                </div>
                              </td>
                              <td
                                class=""
                              >
                                <div
                                  class="day-container"
                                >
                                  <button
                                    class="button-root day-root btn btn-unstyled"
                                    type="button"
                                  >
                                    9
                                  </button>
                                </div>
                              </td>
                              <td
                                class=""
                              >
                                <div
                                  class="day-container"
                                >
                                  <button
                                    class="button-root day-root btn btn-unstyled"
                                    type="button"
                                  >
                                    10
                                  </button>
                                </div>
                              </td>
                              <td
                                class=""
                              >
                                <div
                                  class="day-container"
                                >
                                  <button
                                    class="button-root day-root btn btn-unstyled"
                                    type="button"
                                  >
                                    11
                                  </button>
                                </div>
                              </td>
                            </tr>
                            <tr>
                              <td
                                class=""
                              >
                                <div
                                  class="day-container"
                                >
                                  <button
                                    class="button-root day-root btn btn-unstyled"
                                    type="button"
                                  >
                                    12
                                  </button>
                                </div>
                              </td>
                              <td
                                class=""
                              >
                                <div
                                  class="day-container"
                                >
                                  <button
                                    class="button-root day-root btn btn-unstyled"
                                    type="button"
                                  >
                                    13
                                  </button>
                                </div>
                              </td>
                              <td
                                class=""
                              >
                                <div
                                  class="day-container"
                                >
                                  <button
                                    class="button-root day-root btn btn-unstyled"
                                    type="button"
                                  >
                                    14
                                  </button>
                                </div>
                              </td>
                              <td
                                class=""
                              >
                                <div
                                  class="day-container"
                                >
                                  <button
                                    class="button-root day-root btn btn-unstyled"
                                    type="button"
                                  >
                                    15
                                  </button>
                                </div>
                              </td>
                              <td
                                class=""
                              >
                                <div
                                  class="day-container"
                                >
                                  <button
                                    class="button-root day-root btn btn-unstyled"
                                    type="button"
                                  >
                                    16
                                  </button>
                                </div>
                              </td>
                              <td
                                class=""
                              >
                                <div
                                  class="day-container"
                                >
                                  <button
                                    class="button-root day-root btn btn-unstyled"
                                    disabled=""
                                    type="button"
                                  >
                                    17
                                  </button>
                                </div>
                              </td>
                              <td
                                class=""
                              >
                                <div
                                  class="day-container"
                                >
                                  <button
                                    class="button-root day-root btn btn-unstyled"
                                    disabled=""
                                    type="button"
                                  >
                                    18
                                  </button>
                                </div>
                              </td>
                            </tr>
                            <tr>
                              <td
                                class=""
                              >
                                <div
                                  class="day-container"
                                >
                                  <button
                                    class="button-root day-root btn btn-unstyled"
                                    disabled=""
                                    type="button"
                                  >
                                    19
                                  </button>
                                </div>
                              </td>
                              <td
                                class=""
                              >
                                <div
                                  class="day-container"
                                >
                                  <button
                                    class="button-root day-root btn btn-unstyled"
                                    disabled=""
                                    type="button"
                                  >
                                    20
                                  </button>
                                </div>
                              </td>
                              <td
                                class=""
                              >
                                <div
                                  class="day-container"
                                >
                                  <button
                                    class="button-root day-root btn btn-unstyled"
                                    disabled=""
                                    type="button"
                                  >
                                    21
                                  </button>
                                </div>
                              </td>
                              <td
                                class=""
                              >
                                <div
                                  class="day-container"
                                >
                                  <button
                                    class="button-root day-root btn btn-unstyled"
                                    disabled=""
                                    type="button"
                                  >
                                    22
                                  </button>
                                </div>
                              </td>
                              <td
                                class=""
                              >
                                <div
                                  class="day-container"
                                >
                                  <button
                                    class="button-root day-root btn btn-unstyled"
                                    disabled=""
                                    type="button"
                                  >
                                    23
                                  </button>
                                </div>
                              </td>
                              <td
                                class=""
                              >
                                <div
                                  class="day-container"
                                >
                                  <button
                                    class="button-root day-root btn btn-unstyled"
                                    disabled=""
                                    type="button"
                                  >
                                    24
                                  </button>
                                </div>
                              </td>
                              <td
                                class=""
                              >
                                <div
                                  class="day-container"
                                >
                                  <button
                                    class="button-root day-root btn btn-unstyled"
                                    disabled=""
                                    type="button"
                                  >
                                    25
                                  </button>
                                </div>
                              </td>
                            </tr>
                            <tr>
                              <td
                                class=""
                              >
                                <div
                                  class="day-container"
                                >
                                  <button
                                    class="button-root day-root btn btn-unstyled"
                                    disabled=""
                                    type="button"
                                  >
                                    26
                                  </button>
                                </div>
                              </td>
                              <td
                                class=""
                              >
                                <div
                                  class="day-container"
                                >
                                  <button
                                    class="button-root day-root btn btn-unstyled"
                                    disabled=""
                                    type="button"
                                  >
                                    27
                                  </button>
                                </div>
                              </td>
                              <td
                                class=""
                              >
                                <div
                                  class="day-container"
                                >
                                  <button
                                    class="button-root day-root btn btn-unstyled"
                                    disabled=""
                                    type="button"
                                  >
                                    28
                                  </button>
                                </div>
                              </td>
                              <td
                                class=""
                              >
                                <div
                                  class="day-container"
                                >
                                  <button
                                    class="button-root day-root btn btn-unstyled"
                                    disabled=""
                                    type="button"
                                  >
                                    29
                                  </button>
                                </div>
                              </td>
                              <td
                                class=""
                              >
                                <div
                                  class="day-container"
                                >
                                  <button
                                    class="button-root day-root btn btn-unstyled"
                                    disabled=""
                                    type="button"
                                  >
                                    30
                                  </button>
                                </div>
                              </td>
                              <td
                                class=""
                              >
                                <div
                                  class="day-container"
                                >
                                  <button
                                    class="button-root day-root outside-month btn btn-unstyled"
                                    disabled=""
                                    type="button"
                                  >
                                    1
                                  </button>
                                </div>
                              </td>
                              <td
                                class=""
                              >
                                <div
                                  class="day-container"
                                >
                                  <button
                                    class="button-root day-root outside-month btn btn-unstyled"
                                    disabled=""
                                    type="button"
                                  >
                                    2
                                  </button>
                                </div>
                              </td>
                            </tr>
                          </tbody>
                        </table>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="modal-footer"
          >
            <div
              class="modal-item-first"
            />
            <div
              class="modal-item"
            />
            <div
              class="modal-item-last"
            >
              <div
                class="btn-group"
                role="group"
              >
                <div
                  class="btn-group-item"
                >
                  <button
                    class="btn btn-secondary"
                    data-testid="cancel"
                    type="button"
                  >
                    Cancel
                  </button>
                </div>
                <div
                  class="btn-group-item"
                >
                  <button
                    class="btn btn-primary"
                    data-testid="submit"
                    disabled=""
                    type="submit"
                  >
                    Download
                  </button>
                </div>
              </div>
            </div>
          </div>
        </form>
      </div>
    </div>
    <div />
  </div>
  <button
    aria-hidden="true"
    class="btn btn-outline-borderless btn-sm btn-outline-secondary"
    data-suppressed="true"
    type="button"
  >
    <svg
      class="lexicon-icon lexicon-icon-download mr-2"
      role="presentation"
    >
      <use
        href="#download"
      />
    </svg>
    Download Report
  </button>
</div>
`;

exports[`DownloadReportModal PDF renders component 1`] = `
<div>
  <div
    aria-hidden="true"
    class="modal-backdrop fade show"
    data-suppressed="true"
  />
  <div
    class="fade modal d-block show"
  >
    <div
      class="modal-dialog"
    >
      <div
        aria-labelledby="clay-modal-label-1"
        aria-modal="true"
        class="modal-content"
        role="dialog"
        tabindex="-1"
      >
        <form>
          <div
            class="modal-header"
          >
            <h1
              class="modal-title"
              id="clay-modal-label-1"
            >
              Download Report
            </h1>
            <button
              aria-label="close"
              class="close btn btn-unstyled"
              type="button"
            >
              <svg
                class="lexicon-icon lexicon-icon-times"
                role="presentation"
              >
                <use
                  href="#times"
                />
              </svg>
            </button>
          </div>
          <div
            class="modal-body"
          >
            <div
              class="alert alert-dismissible alert-info"
            >
              <div
                class="alert-autofit-row autofit-row"
                role="alert"
              >
                <div
                  class="autofit-col"
                >
                  <div
                    class="autofit-section"
                  >
                    <span
                      class="alert-indicator"
                    >
                      <svg
                        class="lexicon-icon lexicon-icon-info-circle"
                        role="presentation"
                      >
                        <use
                          href="/o/osb-faro-web/dist/sprite.svg#info-circle"
                        />
                      </svg>
                    </span>
                  </div>
                </div>
                <div
                  class="autofit-col autofit-col-expand"
                >
                  <div
                    class="autofit-section"
                  >
                    <strong
                      class="lead"
                    >
                      Info
                    </strong>
                    The dashboard will be downloaded exactly as it is displayed on your screen. Please verify if the desired tabs and filters are selected before downloading.
                  </div>
                </div>
              </div>
              <button
                aria-label="Close"
                class="close"
                type="button"
              >
                <svg
                  class="lexicon-icon lexicon-icon-times"
                  role="presentation"
                >
                  <use
                    href="/o/osb-faro-web/dist/sprite.svg#times"
                  />
                </svg>
              </button>
            </div>
            <p>
              Select the reports, and optionally specify the date range to generate a PDF file from the current dashboard. Your download may take a couple of minutes to process.
            </p>
            <div
              class="form-group"
            >
              <label
                for="timeRange"
              >
                Date Range (Optional)
              </label>
              <div
                class="dropdown"
              >
                <div
                  aria-controls="clay-dropdown-menu-1"
                  aria-expanded="false"
                  aria-haspopup="true"
                  class="input-group dropdown-toggle"
                >
                  <div
                    class="input-group-item input-group-prepend"
                  >
                    <input
                      class="form-control"
                      id="timeRange"
                      placeholder="YYYY-MM-DD - YYYY-MM-DD"
                      readonly=""
                      type="text"
                      value=""
                    />
                  </div>
                  <div
                    class="input-group-item input-group-append input-group-item-shrink"
                  >
                    <div
                      class="input-group-text"
                    >
                      <svg
                        class="lexicon-icon lexicon-icon-calendar"
                        role="presentation"
                      >
                        <use
                          href="#calendar"
                        />
                      </svg>
                    </div>
                  </div>
                </div>
                <div>
                  <div
                    aria-hidden="true"
                    class="dropdown-menu"
                    id="clay-dropdown-menu-1"
                    role="presentation"
                    style="max-width: none; min-width: none;"
                  >
                    <div
                      aria-disabled="false"
                      class="date-picker-root p-2"
                    >
                      <div
                        class="controls"
                      >
                        <div
                          class="month-toggle-wrapper"
                        >
                          <select
                            class="date-picker-select-root form-control"
                          >
                            <option
                              value="January"
                            >
                              January
                            </option>
                            <option
                              value="February"
                            >
                              February
                            </option>
                            <option
                              value="March"
                            >
                              March
                            </option>
                            <option
                              value="April"
                            >
                              April
                            </option>
                            <option
                              value="May"
                            >
                              May
                            </option>
                            <option
                              value="June"
                            >
                              June
                            </option>
                            <option
                              value="July"
                            >
                              July
                            </option>
                            <option
                              value="August"
                            >
                              August
                            </option>
                            <option
                              value="September"
                            >
                              September
                            </option>
                            <option
                              value="October"
                            >
                              October
                            </option>
                            <option
                              value="November"
                            >
                              November
                            </option>
                            <option
                              value="December"
                            >
                              December
                            </option>
                          </select>
                          <select
                            class="date-picker-select-root form-control"
                          >
                            <option
                              value="2023"
                            >
                              2023
                            </option>
                            <option
                              value="2022"
                            >
                              2022
                            </option>
                            <option
                              value="2021"
                            >
                              2021
                            </option>
                            <option
                              value="2020"
                            >
                              2020
                            </option>
                            <option
                              value="2019"
                            >
                              2019
                            </option>
                            <option
                              value="2018"
                            >
                              2018
                            </option>
                            <option
                              value="2017"
                            >
                              2017
                            </option>
                            <option
                              value="2016"
                            >
                              2016
                            </option>
                            <option
                              value="2015"
                            >
                              2015
                            </option>
                            <option
                              value="2014"
                            >
                              2014
                            </option>
                          </select>
                        </div>
                        <button
                          aria-label="Previous month"
                          class="button-root btn btn-monospaced btn-sm btn-secondary"
                          type="button"
                        >
                          <svg
                            class="lexicon-icon lexicon-icon-angle-left-small icon-root"
                            role="presentation"
                          >
                            <use
                              href="#angle-left-small"
                            />
                          </svg>
                        </button>
                        <button
                          class="button-root current-day-btn btn btn-monospaced btn-sm btn-secondary"
                          type="button"
                        >
                          •
                        </button>
                        <button
                          aria-label="Next month"
                          class="button-root btn btn-monospaced btn-sm btn-secondary"
                          data-testid="next-month"
                          disabled=""
                          type="button"
                        >
                          <svg
                            class="lexicon-icon lexicon-icon-angle-right-small icon-root"
                            role="presentation"
                          >
                            <use
                              href="#angle-right-small"
                            />
                          </svg>
                        </button>
                      </div>
                      <div
                        class="picker-body"
                      >
                        <table
                          class="calendar-root"
                        >
                          <thead>
                            <tr>
                              <th>
                                Sun
                              </th>
                              <th>
                                Mon
                              </th>
                              <th>
                                Tue
                              </th>
                              <th>
                                Wed
                              </th>
                              <th>
                                Thu
                              </th>
                              <th>
                                Fri
                              </th>
                              <th>
                                Sat
                              </th>
                            </tr>
                          </thead>
                          <tbody>
                            <tr>
                              <td
                                class=""
                              >
                                <div
                                  class="day-container"
                                >
                                  <button
                                    class="button-root day-root outside-month btn btn-unstyled"
                                    type="button"
                                  >
                                    29
                                  </button>
                                </div>
                              </td>
                              <td
                                class=""
                              >
                                <div
                                  class="day-container"
                                >
                                  <button
                                    class="button-root day-root outside-month btn btn-unstyled"
                                    type="button"
                                  >
                                    30
                                  </button>
                                </div>
                              </td>
                              <td
                                class=""
                              >
                                <div
                                  class="day-container"
                                >
                                  <button
                                    class="button-root day-root outside-month btn btn-unstyled"
                                    type="button"
                                  >
                                    31
                                  </button>
                                </div>
                              </td>
                              <td
                                class=""
                              >
                                <div
                                  class="day-container"
                                >
                                  <button
                                    class="button-root day-root btn btn-unstyled"
                                    type="button"
                                  >
                                    1
                                  </button>
                                </div>
                              </td>
                              <td
                                class=""
                              >
                                <div
                                  class="day-container"
                                >
                                  <button
                                    class="button-root day-root btn btn-unstyled"
                                    type="button"
                                  >
                                    2
                                  </button>
                                </div>
                              </td>
                              <td
                                class=""
                              >
                                <div
                                  class="day-container"
                                >
                                  <button
                                    class="button-root day-root btn btn-unstyled"
                                    type="button"
                                  >
                                    3
                                  </button>
                                </div>
                              </td>
                              <td
                                class=""
                              >
                                <div
                                  class="day-container"
                                >
                                  <button
                                    class="button-root day-root btn btn-unstyled"
                                    type="button"
                                  >
                                    4
                                  </button>
                                </div>
                              </td>
                            </tr>
                            <tr>
                              <td
                                class=""
                              >
                                <div
                                  class="day-container"
                                >
                                  <button
                                    class="button-root day-root btn btn-unstyled"
                                    type="button"
                                  >
                                    5
                                  </button>
                                </div>
                              </td>
                              <td
                                class=""
                              >
                                <div
                                  class="day-container"
                                >
                                  <button
                                    class="button-root day-root btn btn-unstyled"
                                    type="button"
                                  >
                                    6
                                  </button>
                                </div>
                              </td>
                              <td
                                class=""
                              >
                                <div
                                  class="day-container"
                                >
                                  <button
                                    class="button-root day-root btn btn-unstyled"
                                    type="button"
                                  >
                                    7
                                  </button>
                                </div>
                              </td>
                              <td
                                class=""
                              >
                                <div
                                  class="day-container"
                                >
                                  <button
                                    class="button-root day-root btn btn-unstyled"
                                    type="button"
                                  >
                                    8
                                  </button>
                                </div>
                              </td>
                              <td
                                class=""
                              >
                                <div
                                  class="day-container"
                                >
                                  <button
                                    class="button-root day-root btn btn-unstyled"
                                    type="button"
                                  >
                                    9
                                  </button>
                                </div>
                              </td>
                              <td
                                class=""
                              >
                                <div
                                  class="day-container"
                                >
                                  <button
                                    class="button-root day-root btn btn-unstyled"
                                    type="button"
                                  >
                                    10
                                  </button>
                                </div>
                              </td>
                              <td
                                class=""
                              >
                                <div
                                  class="day-container"
                                >
                                  <button
                                    class="button-root day-root btn btn-unstyled"
                                    type="button"
                                  >
                                    11
                                  </button>
                                </div>
                              </td>
                            </tr>
                            <tr>
                              <td
                                class=""
                              >
                                <div
                                  class="day-container"
                                >
                                  <button
                                    class="button-root day-root btn btn-unstyled"
                                    type="button"
                                  >
                                    12
                                  </button>
                                </div>
                              </td>
                              <td
                                class=""
                              >
                                <div
                                  class="day-container"
                                >
                                  <button
                                    class="button-root day-root btn btn-unstyled"
                                    type="button"
                                  >
                                    13
                                  </button>
                                </div>
                              </td>
                              <td
                                class=""
                              >
                                <div
                                  class="day-container"
                                >
                                  <button
                                    class="button-root day-root btn btn-unstyled"
                                    type="button"
                                  >
                                    14
                                  </button>
                                </div>
                              </td>
                              <td
                                class=""
                              >
                                <div
                                  class="day-container"
                                >
                                  <button
                                    class="button-root day-root btn btn-unstyled"
                                    type="button"
                                  >
                                    15
                                  </button>
                                </div>
                              </td>
                              <td
                                class=""
                              >
                                <div
                                  class="day-container"
                                >
                                  <button
                                    class="button-root day-root btn btn-unstyled"
                                    type="button"
                                  >
                                    16
                                  </button>
                                </div>
                              </td>
                              <td
                                class=""
                              >
                                <div
                                  class="day-container"
                                >
                                  <button
                                    class="button-root day-root btn btn-unstyled"
                                    disabled=""
                                    type="button"
                                  >
                                    17
                                  </button>
                                </div>
                              </td>
                              <td
                                class=""
                              >
                                <div
                                  class="day-container"
                                >
                                  <button
                                    class="button-root day-root btn btn-unstyled"
                                    disabled=""
                                    type="button"
                                  >
                                    18
                                  </button>
                                </div>
                              </td>
                            </tr>
                            <tr>
                              <td
                                class=""
                              >
                                <div
                                  class="day-container"
                                >
                                  <button
                                    class="button-root day-root btn btn-unstyled"
                                    disabled=""
                                    type="button"
                                  >
                                    19
                                  </button>
                                </div>
                              </td>
                              <td
                                class=""
                              >
                                <div
                                  class="day-container"
                                >
                                  <button
                                    class="button-root day-root btn btn-unstyled"
                                    disabled=""
                                    type="button"
                                  >
                                    20
                                  </button>
                                </div>
                              </td>
                              <td
                                class=""
                              >
                                <div
                                  class="day-container"
                                >
                                  <button
                                    class="button-root day-root btn btn-unstyled"
                                    disabled=""
                                    type="button"
                                  >
                                    21
                                  </button>
                                </div>
                              </td>
                              <td
                                class=""
                              >
                                <div
                                  class="day-container"
                                >
                                  <button
                                    class="button-root day-root btn btn-unstyled"
                                    disabled=""
                                    type="button"
                                  >
                                    22
                                  </button>
                                </div>
                              </td>
                              <td
                                class=""
                              >
                                <div
                                  class="day-container"
                                >
                                  <button
                                    class="button-root day-root btn btn-unstyled"
                                    disabled=""
                                    type="button"
                                  >
                                    23
                                  </button>
                                </div>
                              </td>
                              <td
                                class=""
                              >
                                <div
                                  class="day-container"
                                >
                                  <button
                                    class="button-root day-root btn btn-unstyled"
                                    disabled=""
                                    type="button"
                                  >
                                    24
                                  </button>
                                </div>
                              </td>
                              <td
                                class=""
                              >
                                <div
                                  class="day-container"
                                >
                                  <button
                                    class="button-root day-root btn btn-unstyled"
                                    disabled=""
                                    type="button"
                                  >
                                    25
                                  </button>
                                </div>
                              </td>
                            </tr>
                            <tr>
                              <td
                                class=""
                              >
                                <div
                                  class="day-container"
                                >
                                  <button
                                    class="button-root day-root btn btn-unstyled"
                                    disabled=""
                                    type="button"
                                  >
                                    26
                                  </button>
                                </div>
                              </td>
                              <td
                                class=""
                              >
                                <div
                                  class="day-container"
                                >
                                  <button
                                    class="button-root day-root btn btn-unstyled"
                                    disabled=""
                                    type="button"
                                  >
                                    27
                                  </button>
                                </div>
                              </td>
                              <td
                                class=""
                              >
                                <div
                                  class="day-container"
                                >
                                  <button
                                    class="button-root day-root btn btn-unstyled"
                                    disabled=""
                                    type="button"
                                  >
                                    28
                                  </button>
                                </div>
                              </td>
                              <td
                                class=""
                              >
                                <div
                                  class="day-container"
                                >
                                  <button
                                    class="button-root day-root btn btn-unstyled"
                                    disabled=""
                                    type="button"
                                  >
                                    29
                                  </button>
                                </div>
                              </td>
                              <td
                                class=""
                              >
                                <div
                                  class="day-container"
                                >
                                  <button
                                    class="button-root day-root btn btn-unstyled"
                                    disabled=""
                                    type="button"
                                  >
                                    30
                                  </button>
                                </div>
                              </td>
                              <td
                                class=""
                              >
                                <div
                                  class="day-container"
                                >
                                  <button
                                    class="button-root day-root outside-month btn btn-unstyled"
                                    disabled=""
                                    type="button"
                                  >
                                    1
                                  </button>
                                </div>
                              </td>
                              <td
                                class=""
                              >
                                <div
                                  class="day-container"
                                >
                                  <button
                                    class="button-root day-root outside-month btn btn-unstyled"
                                    disabled=""
                                    type="button"
                                  >
                                    2
                                  </button>
                                </div>
                              </td>
                            </tr>
                          </tbody>
                        </table>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="form-group"
            >
              <label>
                Select Reports
              </label>
              <div
                class="custom-control custom-checkbox custom-control-outside"
              >
                <label>
                  <input
                    class="custom-control-input"
                    type="checkbox"
                  />
                  <span
                    class="custom-control-label"
                  >
                    <span
                      class="custom-control-label-text"
                    >
                      Acquisitions
                    </span>
                  </span>
                </label>
              </div>
              <div
                class="custom-control custom-checkbox custom-control-outside"
              >
                <label>
                  <input
                    class="custom-control-input"
                    type="checkbox"
                  />
                  <span
                    class="custom-control-label"
                  >
                    <span
                      class="custom-control-label-text"
                    >
                      Active Individuals
                    </span>
                  </span>
                </label>
              </div>
              <div
                class="custom-control custom-checkbox custom-control-outside"
              >
                <label>
                  <input
                    class="custom-control-input"
                    type="checkbox"
                  />
                  <span
                    class="custom-control-label"
                  >
                    <span
                      class="custom-control-label-text"
                    >
                      Asset Appears On
                    </span>
                  </span>
                </label>
              </div>
              <div
                class="custom-control custom-checkbox custom-control-outside"
              >
                <label>
                  <input
                    class="custom-control-input"
                    type="checkbox"
                  />
                  <span
                    class="custom-control-label"
                  >
                    <span
                      class="custom-control-label-text"
                    >
                      Audience
                    </span>
                  </span>
                </label>
              </div>
              <div
                class="custom-control custom-checkbox custom-control-outside"
              >
                <label>
                  <input
                    class="custom-control-input"
                    type="checkbox"
                  />
                  <span
                    class="custom-control-label"
                  >
                    <span
                      class="custom-control-label-text"
                    >
                      Cohort Analysis
                    </span>
                  </span>
                </label>
              </div>
              <div
                class="custom-control custom-checkbox custom-control-outside"
              >
                <label>
                  <input
                    class="custom-control-input"
                    type="checkbox"
                  />
                  <span
                    class="custom-control-label"
                  >
                    <span
                      class="custom-control-label-text"
                    >
                      Current Totals
                    </span>
                  </span>
                </label>
              </div>
              <div
                class="custom-control custom-checkbox custom-control-outside"
              >
                <label>
                  <input
                    class="custom-control-input"
                    type="checkbox"
                  />
                  <span
                    class="custom-control-label"
                  >
                    <span
                      class="custom-control-label-text"
                    >
                      Distribution Breakdown
                    </span>
                  </span>
                </label>
              </div>
              <div
                class="custom-control custom-checkbox custom-control-outside"
              >
                <label>
                  <input
                    class="custom-control-input"
                    type="checkbox"
                  />
                  <span
                    class="custom-control-label"
                  >
                    <span
                      class="custom-control-label-text"
                    >
                      Downloads by Location
                    </span>
                  </span>
                </label>
              </div>
              <div
                class="custom-control custom-checkbox custom-control-outside"
              >
                <label>
                  <input
                    class="custom-control-input"
                    type="checkbox"
                  />
                  <span
                    class="custom-control-label"
                  >
                    <span
                      class="custom-control-label-text"
                    >
                      Downloads by Technology
                    </span>
                  </span>
                </label>
              </div>
              <div
                class="custom-control custom-checkbox custom-control-outside"
              >
                <label>
                  <input
                    class="custom-control-input"
                    type="checkbox"
                  />
                  <span
                    class="custom-control-label"
                  >
                    <span
                      class="custom-control-label-text"
                    >
                      Enriched Profiles
                    </span>
                  </span>
                </label>
              </div>
              <div
                class="custom-control custom-checkbox custom-control-outside"
              >
                <label>
                  <input
                    class="custom-control-input"
                    type="checkbox"
                  />
                  <span
                    class="custom-control-label"
                  >
                    <span
                      class="custom-control-label-text"
                    >
                      Interests
                    </span>
                  </span>
                </label>
              </div>
              <div
                class="custom-control custom-checkbox custom-control-outside"
              >
                <label>
                  <input
                    class="custom-control-input"
                    type="checkbox"
                  />
                  <span
                    class="custom-control-label"
                  >
                    <span
                      class="custom-control-label-text"
                    >
                      Search Terms
                    </span>
                  </span>
                </label>
              </div>
              <div
                class="custom-control custom-checkbox custom-control-outside"
              >
                <label>
                  <input
                    class="custom-control-input"
                    type="checkbox"
                  />
                  <span
                    class="custom-control-label"
                  >
                    <span
                      class="custom-control-label-text"
                    >
                      Segment Composition
                    </span>
                  </span>
                </label>
              </div>
              <div
                class="custom-control custom-checkbox custom-control-outside"
              >
                <label>
                  <input
                    class="custom-control-input"
                    type="checkbox"
                  />
                  <span
                    class="custom-control-label"
                  >
                    <span
                      class="custom-control-label-text"
                    >
                      Segment Criteria
                    </span>
                  </span>
                </label>
              </div>
              <div
                class="custom-control custom-checkbox custom-control-outside"
              >
                <label>
                  <input
                    class="custom-control-input"
                    type="checkbox"
                  />
                  <span
                    class="custom-control-label"
                  >
                    <span
                      class="custom-control-label-text"
                    >
                      Segment Membership
                    </span>
                  </span>
                </label>
              </div>
              <div
                class="custom-control custom-checkbox custom-control-outside"
              >
                <label>
                  <input
                    class="custom-control-input"
                    type="checkbox"
                  />
                  <span
                    class="custom-control-label"
                  >
                    <span
                      class="custom-control-label-text"
                    >
                      Sessions by Location
                    </span>
                  </span>
                </label>
              </div>
              <div
                class="custom-control custom-checkbox custom-control-outside"
              >
                <label>
                  <input
                    class="custom-control-input"
                    type="checkbox"
                  />
                  <span
                    class="custom-control-label"
                  >
                    <span
                      class="custom-control-label-text"
                    >
                      Session Technology
                    </span>
                  </span>
                </label>
              </div>
              <div
                class="custom-control custom-checkbox custom-control-outside"
              >
                <label>
                  <input
                    class="custom-control-input"
                    type="checkbox"
                  />
                  <span
                    class="custom-control-label"
                  >
                    <span
                      class="custom-control-label-text"
                    >
                      Site Activity
                    </span>
                  </span>
                </label>
              </div>
              <div
                class="custom-control custom-checkbox custom-control-outside"
              >
                <label>
                  <input
                    class="custom-control-input"
                    type="checkbox"
                  />
                  <span
                    class="custom-control-label"
                  >
                    <span
                      class="custom-control-label-text"
                    >
                      Submissions by Location
                    </span>
                  </span>
                </label>
              </div>
              <div
                class="custom-control custom-checkbox custom-control-outside"
              >
                <label>
                  <input
                    class="custom-control-input"
                    type="checkbox"
                  />
                  <span
                    class="custom-control-label"
                  >
                    <span
                      class="custom-control-label-text"
                    >
                      Submissions by Technology
                    </span>
                  </span>
                </label>
              </div>
              <div
                class="custom-control custom-checkbox custom-control-outside"
              >
                <label>
                  <input
                    class="custom-control-input"
                    type="checkbox"
                  />
                  <span
                    class="custom-control-label"
                  >
                    <span
                      class="custom-control-label-text"
                    >
                      Top Interests as of Yesterday
                    </span>
                  </span>
                </label>
              </div>
              <div
                class="custom-control custom-checkbox custom-control-outside"
              >
                <label>
                  <input
                    class="custom-control-input"
                    type="checkbox"
                  />
                  <span
                    class="custom-control-label"
                  >
                    <span
                      class="custom-control-label-text"
                    >
                      Top Interests
                    </span>
                  </span>
                </label>
              </div>
              <div
                class="custom-control custom-checkbox custom-control-outside"
              >
                <label>
                  <input
                    class="custom-control-input"
                    type="checkbox"
                  />
                  <span
                    class="custom-control-label"
                  >
                    <span
                      class="custom-control-label-text"
                    >
                      Top Pages
                    </span>
                  </span>
                </label>
              </div>
              <div
                class="custom-control custom-checkbox custom-control-outside"
              >
                <label>
                  <input
                    class="custom-control-input"
                    type="checkbox"
                  />
                  <span
                    class="custom-control-label"
                  >
                    <span
                      class="custom-control-label-text"
                    >
                      Views by Location
                    </span>
                  </span>
                </label>
              </div>
              <div
                class="custom-control custom-checkbox custom-control-outside"
              >
                <label>
                  <input
                    class="custom-control-input"
                    type="checkbox"
                  />
                  <span
                    class="custom-control-label"
                  >
                    <span
                      class="custom-control-label-text"
                    >
                      Views by Technology
                    </span>
                  </span>
                </label>
              </div>
              <div
                class="custom-control custom-checkbox custom-control-outside"
              >
                <label>
                  <input
                    class="custom-control-input"
                    type="checkbox"
                  />
                  <span
                    class="custom-control-label"
                  >
                    <span
                      class="custom-control-label-text"
                    >
                      Visitors Behavior
                    </span>
                  </span>
                </label>
              </div>
              <div
                class="custom-control custom-checkbox custom-control-outside"
              >
                <label>
                  <input
                    class="custom-control-input"
                    type="checkbox"
                  />
                  <span
                    class="custom-control-label"
                  >
                    <span
                      class="custom-control-label-text"
                    >
                      Visitors by Day and Time
                    </span>
                  </span>
                </label>
              </div>
            </div>
          </div>
          <div
            class="modal-footer"
          >
            <div
              class="modal-item-first"
            />
            <div
              class="modal-item"
            />
            <div
              class="modal-item-last"
            >
              <div
                class="btn-group"
                role="group"
              >
                <div
                  class="btn-group-item"
                >
                  <button
                    class="btn btn-secondary"
                    data-testid="cancel"
                    type="button"
                  >
                    Cancel
                  </button>
                </div>
                <div
                  class="btn-group-item"
                >
                  <button
                    class="btn btn-primary"
                    data-testid="submit"
                    type="submit"
                  >
                    Download
                  </button>
                </div>
              </div>
            </div>
          </div>
        </form>
      </div>
    </div>
    <div />
  </div>
  <button
    aria-hidden="true"
    class="btn btn-outline-borderless btn-sm btn-outline-secondary"
    data-suppressed="true"
    type="button"
  >
    <svg
      class="lexicon-icon lexicon-icon-download mr-2"
      role="presentation"
    >
      <use
        href="#download"
      />
    </svg>
    Download Report
  </button>
</div>
`;
